{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 42,
  "lineage": "046921d6-eca0-9b9d-36a8-427a64a74ef8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b5a285d261350f1",
            "arn": "arn:aws:ec2:us-east-1:637423659982:elastic-ip/eipalloc-09b5a285d261350f1",
            "association_id": "eipassoc-051dc494ca47c7853",
            "domain": "vpc",
            "id": "eipalloc-09b5a285d261350f1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0362baf1697e41a82",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-18-215-0-119.compute-1.amazonaws.com",
            "public_ip": "18.215.0.119",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "eipalloc-09b5a285d261350f1",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-0cf020c6da96920e7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf020c6da96920e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ff03023ffdf6e42a"
              }
            ],
            "primary_network_interface_id": "eni-0ff03023ffdf6e42a",
            "private_dns": "ip-10-0-0-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.58",
            "public_ip": "18.209.22.89",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1c6166c9cdf6ad5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c71ea86a2fad138d",
            "tags": {
              "Name": "k3s-bastion"
            },
            "tags_all": {
              "Name": "k3s-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023c02517fcbffeae"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-0cf020c6da96920e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-090b820ae79fba2ff",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090b820ae79fba2ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0443df94e8ab54c3f"
              }
            ],
            "primary_network_interface_id": "eni-0443df94e8ab54c3f",
            "private_dns": "ip-10-0-3-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.74",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddaa746a84c52028",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5491e14e6261942",
            "tags": {
              "Name": "k3s-master-1"
            },
            "tags_all": {
              "Name": "k3s-master-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b999a524d581f56b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-090b820ae79fba2ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-06fbfd2b34d997130",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fbfd2b34d997130",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09c3668a433d75805"
              }
            ],
            "primary_network_interface_id": "eni-09c3668a433d75805",
            "private_dns": "ip-10-0-4-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.204",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066701d5b35a693fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02feab188a1aa3d7b",
            "tags": {
              "Name": "k3s-master-2"
            },
            "tags_all": {
              "Name": "k3s-master-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b999a524d581f56b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-06fbfd2b34d997130",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-0e7bb8d4d655bff75",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7bb8d4d655bff75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05b25fa422e9c86bf"
              }
            ],
            "primary_network_interface_id": "eni-05b25fa422e9c86bf",
            "private_dns": "ip-10-0-5-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.37",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bc17ffd918edeea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb802c89add6ead2",
            "tags": {
              "Name": "k3s-master-3"
            },
            "tags_all": {
              "Name": "k3s-master-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b999a524d581f56b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-0e7bb8d4d655bff75",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-0c7bf66ba394ca72e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c7bf66ba394ca72e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e07ebf3239f44239"
              }
            ],
            "primary_network_interface_id": "eni-0e07ebf3239f44239",
            "private_dns": "ip-10-0-3-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.236",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c6eedfd04f2522e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5491e14e6261942",
            "tags": {
              "Name": "k3s-worker-1"
            },
            "tags_all": {
              "Name": "k3s-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b999a524d581f56b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-0c7bf66ba394ca72e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-08127d448dd20c2a7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08127d448dd20c2a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05a76d1aa21a97f20"
              }
            ],
            "primary_network_interface_id": "eni-05a76d1aa21a97f20",
            "private_dns": "ip-10-0-4-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.238",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098b52b441957bc38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02feab188a1aa3d7b",
            "tags": {
              "Name": "k3s-worker-2"
            },
            "tags_all": {
              "Name": "k3s-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b999a524d581f56b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-08127d448dd20c2a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0647fb535573be346",
            "arn": "arn:aws:ec2:us-east-1:637423659982:instance/i-0b2a6e61b7dd53784",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2a6e61b7dd53784",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k3s-ubuntu-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-058f41cf5dca3647f"
              }
            ],
            "primary_network_interface_id": "eni-058f41cf5dca3647f",
            "private_dns": "ip-10-0-5-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.5.245",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027166660d7055852",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb802c89add6ead2",
            "tags": {
              "Name": "k3s-worker-3"
            },
            "tags_all": {
              "Name": "k3s-worker-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b999a524d581f56b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "i-0b2a6e61b7dd53784",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.k3s_key",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:internet-gateway/igw-0fc6df7128e58052d",
            "id": "igw-0fc6df7128e58052d",
            "owner_id": "637423659982",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-igw"
            },
            "tags_all": {
              "Name": "k3s-igw"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "igw-0fc6df7128e58052d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:loadbalancer/net/my-nlb/d8820c9c9bfb36cc",
            "arn_suffix": "net/my-nlb/d8820c9c9bfb36cc",
            "dns_name": "my-nlb-d8820c9c9bfb36cc.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423659982:loadbalancer/net/my-nlb/d8820c9c9bfb36cc",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "my-nlb",
            "region": "us-east-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051c4282351db923c"
              },
              {
                "subnet_id": "subnet-094044bed60af51d1"
              },
              {
                "subnet_id": "subnet-0c71ea86a2fad138d"
              }
            ],
            "subnets": [
              "subnet-051c4282351db923c",
              "subnet-094044bed60af51d1",
              "subnet-0c71ea86a2fad138d"
            ],
            "vpc_id": "vpc-0201755d68ad69c39",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:loadbalancer/net/my-nlb/d8820c9c9bfb36cc"
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:listener/net/my-nlb/d8820c9c9bfb36cc/04ae09d4e2faa11b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423659982:listener/net/my-nlb/d8820c9c9bfb36cc/04ae09d4e2faa11b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:loadbalancer/net/my-nlb/d8820c9c9bfb36cc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:listener/net/my-nlb/d8820c9c9bfb36cc/04ae09d4e2faa11b"
          },
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.tg",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "arn_suffix": "targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:637423659982:loadbalancer/net/my-nlb/d8820c9c9bfb36cc"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nlb-target-group",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "t1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1,i-0c7bf66ba394ca72e,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "target_id": "i-0c7bf66ba394ca72e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "target_id": "i-0c7bf66ba394ca72e"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k3s_key",
            "aws_lb_target_group.tg",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1,i-08127d448dd20c2a7,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "target_id": "i-08127d448dd20c2a7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "target_id": "i-08127d448dd20c2a7"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k3s_key",
            "aws_lb_target_group.tg",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "t3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1,i-0b2a6e61b7dd53784,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "target_id": "i-0b2a6e61b7dd53784"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423659982:targetgroup/nlb-target-group/c82d1bc885c9f7f1",
            "target_id": "i-0b2a6e61b7dd53784"
          },
          "dependencies": [
            "aws_instance.workers",
            "aws_key_pair.k3s_key",
            "aws_lb_target_group.tg",
            "aws_security_group.k3s_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.k3s_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b5a285d261350f1",
            "association_id": "eipassoc-051dc494ca47c7853",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-088ec5f7c4998a242",
            "network_interface_id": "eni-0362baf1697e41a82",
            "private_ip": "10.0.0.10",
            "public_ip": "18.215.0.119",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c71ea86a2fad138d",
            "tags": {
              "Name": "k3s-nat"
            },
            "tags_all": {
              "Name": "k3s-nat"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "nat-088ec5f7c4998a242",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:route-table/rtb-022d539a0511b9458",
            "id": "rtb-022d539a0511b9458",
            "owner_id": "637423659982",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088ec5f7c4998a242",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k3s-private-rt"
            },
            "tags_all": {
              "Name": "k3s-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtb-022d539a0511b9458",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:route-table/rtb-04e0340b423eb06cf",
            "id": "rtb-04e0340b423eb06cf",
            "owner_id": "637423659982",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc6df7128e58052d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k3s-public-rt"
            },
            "tags_all": {
              "Name": "k3s-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtb-04e0340b423eb06cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e43f3f1813e2ef08",
            "region": "us-east-1",
            "route_table_id": "rtb-022d539a0511b9458",
            "subnet_id": "subnet-0e5491e14e6261942"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtbassoc-0e43f3f1813e2ef08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0415019a214c39a3a",
            "region": "us-east-1",
            "route_table_id": "rtb-022d539a0511b9458",
            "subnet_id": "subnet-02feab188a1aa3d7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtbassoc-0415019a214c39a3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d8122779a082bab",
            "region": "us-east-1",
            "route_table_id": "rtb-022d539a0511b9458",
            "subnet_id": "subnet-0bb802c89add6ead2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtbassoc-09d8122779a082bab",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017ce98dc2e937fd4",
            "region": "us-east-1",
            "route_table_id": "rtb-04e0340b423eb06cf",
            "subnet_id": "subnet-0c71ea86a2fad138d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtbassoc-017ce98dc2e937fd4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a737dfdd64441442",
            "region": "us-east-1",
            "route_table_id": "rtb-04e0340b423eb06cf",
            "subnet_id": "subnet-094044bed60af51d1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtbassoc-0a737dfdd64441442",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcfc85da8b6a81e2",
            "region": "us-east-1",
            "route_table_id": "rtb-04e0340b423eb06cf",
            "subnet_id": "subnet-051c4282351db923c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "rtbassoc-0bcfc85da8b6a81e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:security-group/sg-023c02517fcbffeae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023c02517fcbffeae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "637423659982",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "sg-023c02517fcbffeae",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:security-group/sg-0b999a524d581f56b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b999a524d581f56b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k3s-sg",
            "name_prefix": "",
            "owner_id": "637423659982",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "sg-0b999a524d581f56b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:security-group/sg-093f97820efae6952",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093f97820efae6952",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023c02517fcbffeae",
                  "sg-0b999a524d581f56b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "637423659982",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "sg-093f97820efae6952",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.k3s_sg",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:subnet/subnet-0e5491e14e6261942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5491e14e6261942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423659982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-private-subnet-1"
            },
            "tags_all": {
              "Name": "k3s-private-subnet-1"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "subnet-0e5491e14e6261942",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:subnet/subnet-02feab188a1aa3d7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02feab188a1aa3d7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423659982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-private-subnet-2"
            },
            "tags_all": {
              "Name": "k3s-private-subnet-2"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "subnet-02feab188a1aa3d7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:subnet/subnet-0bb802c89add6ead2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb802c89add6ead2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423659982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-private-subnet-3"
            },
            "tags_all": {
              "Name": "k3s-private-subnet-3"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "subnet-0bb802c89add6ead2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:subnet/subnet-0c71ea86a2fad138d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c71ea86a2fad138d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423659982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-public-subnet-1"
            },
            "tags_all": {
              "Name": "k3s-public-subnet-1"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "subnet-0c71ea86a2fad138d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:subnet/subnet-094044bed60af51d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094044bed60af51d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423659982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-public-subnet-2"
            },
            "tags_all": {
              "Name": "k3s-public-subnet-2"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "subnet-094044bed60af51d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:subnet/subnet-051c4282351db923c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051c4282351db923c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423659982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-public-subnet-3"
            },
            "tags_all": {
              "Name": "k3s-public-subnet-3"
            },
            "vpc_id": "vpc-0201755d68ad69c39"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "subnet-051c4282351db923c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k3s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423659982:vpc/vpc-0201755d68ad69c39",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085474535adb1cb09",
            "default_route_table_id": "rtb-08049d0ae111d9ace",
            "default_security_group_id": "sg-088517a057fa277d2",
            "dhcp_options_id": "dopt-0a4961926f67c6fd4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0201755d68ad69c39",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08049d0ae111d9ace",
            "owner_id": "637423659982",
            "region": "us-east-1",
            "tags": {
              "Name": "k3s-vpc"
            },
            "tags_all": {
              "Name": "k3s-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "637423659982",
            "id": "vpc-0201755d68ad69c39",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}